Restyle: Adaptive for all section on small screens / Fix:goTop button.

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -46,7 +46,7 @@
             text-align: center;
             color: #f2612d;
             letter-spacing: -0.5px;
-            font-size: 25px;
+            font-size: 2.5rem;
             font-family: "Muli-ExtraBold";
             font-weight: 800;
         }
@@ -59,6 +59,8 @@
         
     }
     &__img {
+        width: 70px;
+        height: 70px;
         margin-top: 30px;
         &--margin-top {
             margin-top: 40px;
