--- a/less/blocks/blog.less
+++ b/less/blocks/blog.less
@@ -63,6 +63,7 @@
                 margin-left: 10px;
             }
             &-more {
+                display: inline-block;
                 color: #1e1e1e;
                 font-family: "Muli-ExtraBold";
                 font-style: italic;
