--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -59,7 +59,7 @@
             width: 24px;
             height: 19px;
             background-image: url(../assets/images/footer-email.png);
-            top: 35%;
+            top: 30%;
             left: 20px;
         }
     }
@@ -69,12 +69,11 @@
         border:none;
         border-radius: 30px;
         background-color: #ffffff;
+        padding: 0;
         &::placeholder {
             font-size: 1.7rem;
             font-family: "Muli-Bold";
             color: #6d450c;
-            line-height: 2.06;
-            letter-spacing: -0.34px;
             padding-left: 60px;
         }
     }
@@ -155,7 +154,6 @@
         }
     }
 }
-
 
 
 
