--- a/less/blocks/personal.less
+++ b/less/blocks/personal.less
@@ -34,4 +34,9 @@
         -ms-transform: translate(0px, -10px);
         -o-transform: translate(0px, -10px);
     }
+    &__img {
+        &--size{
+            height: 22px;
+        }
+    }
 }
